# Task-Tracker

./: .gitignore  CMakeLists.txt  MakeInstaller.iss  RCa12100  README.md  winResources.rc
assets/: resources.qrc
assets/styles/: dark.qss  light.qss
include/: AddTaskDialog.h  EditTaskDialog.h  Task.h  TaskTrackerApp.h  TaskWidget.h
src/: AddTaskDialog.cpp  EditTaskDialog.cpp  Task.cpp  TaskTrackerApp.cpp  TaskWidget.cpp  main.cpp
